<resources>
    <string name="app_name">GithubUtil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="img_description">Image description</string>
    <string name="loading_error">An error occur while loading</string>
    <string name="name_str">proin magma</string>
    <string name="image_content">Image content</string>
    <string name="description">is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry s standard dummy text ever since the 1500s</string>
    <string name="language">Langue:</string>
    <string name="language_value">luctus</string>
    <string name="textview">TextView</string>
</resources>